<resources>
    <string name="app_name">Astro_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="bottom_sheet_title">Two Clusters and a Comet</string>
    <string name="bottom_sheet_explanation">This lovely starfield spans some four full moons.</string>
    <string name="archive">Archive</string>
    <string name="send">Send</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tdby">TDBY</string>
    <string name="about_picture">ABOUT PICTURE</string>
    <string name="wikipedia">WIKIPEDIA</string>
    <string name="hint_wiki">Search you\'re interested term in Wikipedia</string>
    <string name="helper_wiki">search in wikipedia</string>
    <string name="earth_theme">Earth theme</string>
    <string name="moon_theme">Moon theme</string>
    <string name="mars_theme">Mars Theme</string>
    <string name="choose_app_theme">Choose app theme</string>
    <string name="set_standard_theme">Set standard theme</string>
    <string name="set_selected_theme">Set selected theme</string>
    <string name="choose_astroday">Choose astroday</string>
    <string name="wikipedia_icon">Wikipedia</string>
    <string name="settings_icon">Settings</string>
    <string name="astro">Astro</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="search_photo">Search</string>
    <string name="search">Search</string>
    <string name="date_dialog_hint">DATE</string>
    <string name="confirm_date_dialog">confirm</string>
    <string name="cancel_date_dialog">cancel</string>
    <string name="photo_from_mars">Photo from Mars</string>
    <string name="help_text">
        "In this section you can see the photos that the rovers took during their missions:\n\n"
        "Curiosity – fulfills his duty to this day and sends photos to earth.\n\n"
        "Opportunity – on June 12, 2018, he stopped communicating due to a powerful dust storm. \n\n"
        "Spirit – in May 2009, he got stuck in a sand dune, as a result of which he lost contact with the Earth on March 22, 2010. \n\n"
        "Here you can view photos from the rover, for this you need to choose the model of the rover, its camera from which the photos were taken, as well as the earth date when the photos came. The date is selected in the calendar by short pressing, or in the text line by holding, and then press search.\n\n"
        "If a photo of Mars is displayed, it means that no photo was taken on this day or from this camera. \n\n"
        "To see which cameras are on which rover, follow the <a href="https://api.nasa.gov/index.html#browseAPI">link</a> -> Browse APIs -> Mars Rover Photos ->Rover Cameras\n\nEnjoy using the app!"

    </string>
    <string name="help_description">
        "Dear User,\nHere you will find answers on how to use the section to search for photos from rovers"
    </string>
    <string name="help_manual">MANUAL</string>
    <string name="nasa">NASA</string>

    <string-array name="RoverNames">
        <item>Curiosity</item>
        <item>Opportunity</item>
        <item>Spirit</item>
    </string-array>

    <string-array name="CamerasNames">
        <item>FHAZ</item>
        <item>RHAZ</item>
        <item>MAST</item>
        <item>CHEMCAM</item>
        <item>MAHLI</item>
        <item>MARDI</item>
        <item>NAVCAM</item>
        <item>PANCAM</item>
        <item>MINITES</item>
    </string-array>

</resources>