<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsFragment"
    android:background="@drawable/space_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="?colorPrimaryVariant"
        android:gravity="center"
        android:text="@string/choose_app_theme"
        android:textSize="25sp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:tag="one"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/earth_theme" />

        <com.google.android.material.tabs.TabItem
            android:tag="two"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/moon_theme" />

        <com.google.android.material.tabs.TabItem
            android:tag="three"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:text="@string/mars_theme" />
    </com.google.android.material.tabs.TabLayout>

    <ru.kirill.astro_app.other.EquilateralImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_settings_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_settings_button"
            android:layout_marginRight="@dimen/margin_settings_button"
            android:layout_weight="1"
            android:text="@string/set_standard_theme"
            android:textColor="?android:textColor"/>

        <Button
            android:id="@+id/button_settings_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_settings_button"
            android:layout_marginRight="@dimen/margin_settings_button"
            android:layout_weight="1"
            android:text="@string/set_selected_theme"
            android:textColor="?android:textColor"/>

    </LinearLayout>

</LinearLayout>

