<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:backgroundTint="?colorPrimaryVariant"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/date_dialog_margin"
        android:layout_marginEnd="@dimen/date_dialog_margin"
        android:gravity="center"
        android:hint="@string/date_dialog_hint"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:ems="10"
        android:textColor="?android:textColor"
        android:textColorHint="?android:textColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/noBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/date_dialog_margin"
        android:layout_marginEnd="@dimen/date_dialog_margin"
        android:text="@string/cancel_date_dialog"
        android:textColor="?android:textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/yesBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/date_dialog_margin"
        android:layout_marginEnd="@dimen/date_dialog_margin"
        android:text="@string/confirm_date_dialog"
        android:textColor="?android:textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/noBtn"
        app:layout_constraintTop_toBottomOf="@+id/body" />


</androidx.constraintlayout.widget.ConstraintLayout>
